src/index.css
@import url('https://fonts.google.com/specimen/Fredoka');

:root {
  font-family: 'Fredoka', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: #0d0d0d;
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  text-shadow: 0px 0px 8px #914b6f;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: #fafafa;

  overflow: hidden;
  /* hides scrollbars */
}

h1 {
  font-size: 3em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

svg path,
svg rect {
  transition: fill 0.2s ease-in-out; /* Add a smooth transition */
  transition-delay: 0.15s;
}

svg path:hover,
svg rect:hover {
  fill: #651940; /* Or your desired highlight color */
}

/* homepage */

.hero-container {
  width: 80vw;
  text-align: left;
  position: relative;
  margin: 0px;
}

.home-text {
  z-index: 1;
  position: absolute;
  top: 200px;
  padding-left: 140px;
  color: rgba(255, 255, 255, 0.87);
  transform: scale(1.4);
}

.home-title {
  font-size: 124px;
  line-height: 100px;
  font-weight: 800;
}

.home-subtitle {
  font-size: 36px;
  padding-left: 24px;
  font-weight: 600;
}

.mascot {
  width: 90vh;
  float: right;
  position: absolute;
  margin-left: 240px;
  right: 110px;
  bottom: 50px;
}

.mascot-login, .mascot-register {
  width: 16vh;
  position: static;
 
}

.waves {
  margin-left: -140px;
  margin-TOP: -50px;
  transform: scale(0.985);
  z-index: -1;

}

.waves2 {
  position: absolute;
  z-index: -1.4;
  transform: rotate(174deg) scale(0.84);
  bottom: -94px;
  left: 32vw;
}

.waves3 {
  position: absolute;
  z-index: -1.9;
  transform: rotate(1.6deg) scale(1.2);
  bottom: -8.4vh;
  left: -60px;
}

.svgwaves {
  stroke-dasharray: 8400;
  stroke-width: 4;
  stroke: #26275f;
  animation: draw-and-fill-blue 1.2s ease-in-out 0s forwards;
}

.svgwaves2 {
  stroke-dasharray: 8400;
  stroke-width: 4;
  stroke: #651940;
  animation: draw-and-fill-red 1.2s ease-in-out 0s forwards;
}

.svgwaves3 {
  stroke-dasharray: 8400;
  stroke-width: 4;
  stroke: #F0C7A7;
  animation: draw-and-fill-yellow 1.2s ease-in-out 0s forwards;
}


@keyframes draw-and-fill-blue {
  0% {
    stroke-dashoffset: 8400;
    fill: transparent;
  }
  75% {
    stroke-dashoffset: 0;
    fill: transparent;
  }
  100% {
    stroke-dashoffset: 0;
    fill: #26275f;
  }
}

@keyframes draw-and-fill-red {
  0% {
    stroke-dashoffset: 8400;
    fill: transparent;
  }
  75% {
    stroke-dashoffset: 0;
    fill: transparent;
  }
  100% {
    stroke-dashoffset: 0;
    fill: #651940;
  }
}

@keyframes draw-and-fill-yellow {
  0% {
    stroke-dashoffset: 8400;
    fill: transparent;
  }
  75% {
    stroke-dashoffset: 0;
    fill: transparent;
  }
  100% {
    stroke-dashoffset: 0;
    fill: #F0C7A7;
  }
}

/* Map  */

#map-container {
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  text-align: center;
  overflow: hidden;
}

/* Login Page */
.login-page-body {
  background-color: #651940;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
}

.login-container label {
  text-align: left;
}

.login-container,
.register-container {
  width: 50vw;
  border-radius: 16px;
  background-color:#26275f;
  padding: 32px 24px;
  text-align: center;
}

.login-container h1,
.register-container h1 {
  color: white;
  text-align: center;
  margin-top: 0;
}

.register-container form,
.login-container form {
  display: flex;
  flex-direction: column;
}

.register-container form label,
.login-container form label {
  color: white;
  font-weight: 700;
  padding: 0 12px;
}

.register-container form label[for='pass'],
.login-container form label[for='pass'] {
  margin-top: 16px;
}

.register-container form input,
.login-container form input {
  background-color: white;
  border-radius: 16px;
  padding: 16px 12px;
  color: #0d0d0d;
}

.login-page-body .login-actions {
  margin-top: 32px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 16px;
}

.login-page-body .login-actions button,
.login-page-body .login-actions a {
  border-radius: 30px;
  flex-grow: 1;
  padding: 16px 12px;
  text-align: center;
  font-size: 1.24rem;
}

.login-page-body .login-actions button {
  background-color: #F0C7A7;
}

.login-page-body .login-actions a {
  border: 2px solid #F0C7A7;
  color: white;
}

aside.sidebar {
  display: grid;
  grid-template-rows: repeat(3, min-content);
  grid-row-gap: 16px;
}

aside.sidebar #back-arrow {
  left: -48px;
  top: -40px;
  padding: 24px;
  width: 100px;
  background: white;
  border-radius: 50%;
}

aside.sidebar .review-list {
  display: grid;
  grid-row-gap: 16px;
  grid-auto-flow: row;
  margin: 0 12px;
}

aside.sidebar .review-container {
  background-color:#fafafa;
  color: black;
  display: flex;
  flex-direction: column;
  border-radius: 12px;
  padding: 12px 16px;
}

aside.sidebar .review-container .review-author + span {
  height: 36px;
}

aside.sidebar .review-container .star-svg {
  width: 20px;
}

aside.sidebar .restroom-details h3 {
  text-align: center;
}

.tags {
  padding: 24px 12px;
}

.tags .tag {
  border-radius: 20px;
  background-color: white;
  color:#26275f;
  padding: 12px 16px;
}

.tags .tag + .tag {
  margin-left: 8px;
}

.dropdown {
  padding: 24px 12px;
}

